Add better ui testing